--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,29 @@
+
 body
 {
-    color: grey;
+    color: #1f65e6;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
     margin: 0;
     padding: 0;
+}
+#cabecera
+{
+    background: #33a;
+
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0,);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
 }
 #container
 {
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 10px solid  green;
+    border: 3px solid  blue;
     margin: 0 auto;  
 }
