--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: grey;
     text-align: center;
-    font-family: 'Times New Roman';
+    font-family: 'arial';
     margin: 0;
     padding: 0;
 }
@@ -10,7 +10,7 @@ body
 {
     width: 70%;
     padding: 1em;
-    text-align: right;
+    text-align: center;
     border: 10px solid  green;
     margin: 0 auto;  
 }
